[package]
name = "warbler_grass"
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = ["scripts/"]
keywords = ["bevy", "gamedev", "graphics", "grass", "rendering"]
repository = "https://github.com/EmiOnGit/warbler_grass"
description = "A bevy plugin for creating 3d grass in your game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
bytemuck = "1.13.0"
rand = {version = "0.8.5", features = ["small_rng"]}
bevy = {version = "0.10.0"}
# bevy = {version = "0.10.0", features = ["dynamic_linking"]}
bitflags = "1.3.2"

# bevy_obj = "0.10"
bevy_obj = { git = "https://github.com/AmionSky/bevy_obj", rev = "0ef16687e25e72541aa8a5e3c6e9d8301e74d945" }
# bevy_screen_diagnostics = "0.2"
bevy_screen_diagnostics = { git = "https://github.com/laundmo/bevy_screen_diagnostics", rev = "7da3700375c62e8dba9e9869e2b7923a3fa754ad"}

[[example]]
name = "load_custom"
path = "examples/load_custom.rs"

[[example]]
name = "load_height_map"
path = "examples/load_height_map.rs"

[[example]]
name = "load_many_chunks"
path = "examples/load_many_chunks.rs"

[[example]]
name = "grass_colors"
path = "examples/grass_colors.rs"

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"

[[example]]
name = "swap_grass_mesh"
path = "examples/swap_grass_mesh.rs"
